// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deve renderizar a página inicial do usuário logado (Heisenberg) 1`] = `
<App
  isLoggedIn={true}
  username="Heisenberg"
>
  <div
    className="App"
  >
    <Home
      tasks={
        Array [
          "8am - Chemistry classes at school",
          "12:30pm - Meet Jesse for lunch",
          "15pm - Meet Gus at the Pollos Hermanos",
          "20pm - Dinner by the pool with Hank and Marie",
        ]
      }
      username="Heisenberg"
    >
      <div>
        <p>
          Welcome, 
          Heisenberg
          !
        </p>
        <ul>
          <li
            key="0"
          >
            8am - Chemistry classes at school
          </li>
          <li
            key="1"
          >
            12:30pm - Meet Jesse for lunch
          </li>
          <li
            key="2"
          >
            15pm - Meet Gus at the Pollos Hermanos
          </li>
          <li
            key="3"
          >
            20pm - Dinner by the pool with Hank and Marie
          </li>
        </ul>
      </div>
    </Home>
  </div>
</App>
`;

exports[`deve renderizar a página inicial do usuário não logado 1`] = `
<App
  isLoggedIn={false}
  username={null}
>
  <div
    className="App"
  >
    <p>
      Hello, visitor. Sign in to continue.
    </p>
  </div>
</App>
`;

exports[`deve renderizar a página inicial do usuário sem tarefas 1`] = `
<App
  isLoggedIn={true}
  username="Jessie"
>
  <div
    className="App"
  >
    <Home
      username="Jessie"
    >
      <div>
        <p>
          Welcome, 
          Jessie
          !
        </p>
        <ul />
      </div>
    </Home>
  </div>
</App>
`;
